--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Cociety offers connection you need.</h2>
                 
-                <p class="text-muted lead">코사이어티는 유명인들을 인터뷰하는 팀에서 출발해서 <br> 좋은 사람들이 서로 도움을 나누는 커뮤니티로 확대되었습니다. </p>
+                <p class="text-muted lead">코사이어티는 유명인을 인터뷰하는 팀에서 출발하여, 좋은 사람들이 서로 도움을 나누는 커뮤니티로 확대되었습니다. </p>
             </div>
         </div>
         <div class="row mt-5">
@@ -112,8 +112,8 @@
                                 <span data-feather="edit-3" width="35" height="35"></span>
                             </div>
                         </div>
-                        <h5>Leave the person you want to meet.</h5>
-                        <p class="text-muted">여러분이 만나고 싶은 분을 자유롭게 남겨주세요. <br> 유명인부터 현직자까지 전부 다 가능합니다. <br> 하고 싶은 질문을 남겨주시면 더욱 좋습니다! </p>
+                        <h5>Leave the person you want</h5>
+                        <p class="text-muted">만나고 싶은 분을 자유롭게 남겨주세요. <br> 각종 유명인부터 업계의 현직자까지 <br> 하고 싶은 질문을 함께 남겨주세요! </p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <h5>We contact on behalf</h5>
-                        <p class="text-muted">온라인으로 여러분이 남겨주신 분에게 연락을 드립니다. <br> 매주 투표를 통해 가장 많은 분들이 희망하신 분께는 <br> 대면 미팅을 추진하여 설문자분께 새로운 경험을 선사합니다. </p>
+                        <p class="text-muted">여러분이 남겨주신 분에게 대신 연락해드립니다. <br> 매주 투표를 통해 1등으로 선정된 분은 <br> 한양대에 직접 초대를 진행할 예정입니다. </p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                         <h5>Arrange a meeting between the two</h5>
-                        <p class="text-muted">두 분 사이에 만남을 중개합니다. <br> 약속을 깨뜨릴 위험을 방지하기 위해 선금을 받습니다. <br> 만남 이후 콘텐츠 작성이 완료되면, 2배의 보상을 드립니다. </p>
+                        <p class="text-muted">두 분 사이에 만남을 중개합니다. <br> 만남 이후 콘텐츠 작성이 완료되면, <br> 콘텐츠 작성자 분에게 보상을 제공합니다. </p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
@@ -140,15 +140,15 @@
                             </div>
                         </div>
                         <h5>Available globally</h5>
-                        <p class="text-muted">세상은 넓습니다. <br> 국내에 한정지어서 만나고 싶은 분을 적지 마시고, <br> 글로벌하게 만나고 싶은 분을 적어주세요. </p>
+                        <p class="text-muted">세상은 넓습니다. <br> 국내에 한정지어 생각하지 마시고, <br> 글로벌하게 만나고 싶은 분을 적어주세요. </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row mt-6">
             <div class="col-md-6 mr-auto">
-                <h2>Cociety is more than <br> just a HR service.</h2>
-                <p class="mb-5"> Cociety는 유료로 진행되는 현직자 매칭 서비스와 다릅니다. <br> 좋은 사람들이 모인 커뮤니티를 만들고, 지속가능하도록 최대한 힘을 쓰고 있습니다. <br> 전국에 있는 대학교와 기업 간 협력관계를 구축하고, 채용을 연결해드릴 예정입니다. </p>
+                <h2>Cociety is more than just a <br> HR service.</h2>
+                <p class="mb-5"> Cociety는 유료로 진행되는 매칭 서비스와 다릅니다. <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 전국에 있는 대학교 & 기업과의 협력관계를 구축하고, 채용을 연결해드릴 예정입니다. </p>
                 <a href="#" class="btn btn-light">
                     Try demo Now
                 </a>
@@ -249,7 +249,7 @@
         <div class="row mt-5">
             <div class="col-md-8 col-12 divider top-divider mx-auto pt-5 text-center">
                 <h3>Leave people you want to meet for free</h3>
-                <p class="mb-4">설문을 통해 여러분이 만나고 싶은 분을 간단하게 남겨주세요. <br> 남겨주신 순서대로 매칭을 진행할 예정입니다. </p>
+                <p class="mb-4">설문을 통해 여러분이 만나고 싶은 분을 남겨주세요. <br> 남겨주신 순서대로 매칭을 진행할 예정입니다. </p>
                 <button class="btn btn-primary" onclick="window.location.href='https://the-form.io/forms/survey/response/8ee7bba7-43c8-48f1-9d50-5ffb8dd49d75';">
                     Get Started Now
                 </button>
@@ -276,7 +276,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>Do you have hidden fees?</h6>
-                        <p class="text-muted">커뮤니티의 지속을 위해 매칭 이후 채용까지 연결될 경우, <br> 현직자에게 제공되는 추천 채용보너스를 쉐어합니다.</p>
+                        <p class="text-muted">커뮤니티의 지속을 위해 매칭 이후 채용까지 연결될 경우, 현직자에게 제공되는 채용보너스를 쉐어합니다.</p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>What are the payment methods you accept?</h6>
@@ -284,7 +284,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>How often do you release updates?</h6>
-                        <p class="text-muted">매주 4회 매칭 서비스 제공 및 콘텐츠 제공을 목표로 하고 있습니다.</p>
+                        <p class="text-muted">매주 4회 매칭 및 콘텐츠 제공을 목표로 하고 있습니다.</p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>What is your refund policy?</h6>
@@ -292,7 +292,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>How can I contact you?</h6>
-                        <p class="text-muted">help.cociety@gmail.com 을 통해 문의를 받고 있습니다. <br> 편하게 연락해주세요! 7일 이내 응답드리겠습니다. </p>
+                        <p class="text-muted">help.cociety@gmail.com 을 통해 문의를 받고 있습니다. 편하게 연락해주세요! <br> 7일 이내 응답드리겠습니다. </p>
                     </div>
                 </div>
             </div>
