--- a/index.html
+++ b/index.html
@@ -147,14 +147,15 @@
         </div>
         <div class="row mt-6">
             <div class="col-md-6 mr-auto">
-                <h2>Cociety is more than just a <br> HR service.</h2>
-                <p class="mb-5"> Cociety는 유료로 진행되는 매칭 서비스와 다릅니다. <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 전국에 있는 대학교 & 기업과의 협력관계를 구축하고, 채용을 연결해드릴 예정입니다. </p>
+                <h2>Cociety dreams of <br> a better society. </h2>
+                <p class="mb-5"> Cociety는 유료로 진행되는 HR 서비스를 넘어서 <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 따라서 대학교 & 기업과 협력관계를 구축할 예정입니다. </p>
                 <a href="#" class="btn btn-light">
                     Try demo Now
                 </a>
             </div>
             <div class="col-md-5">
                 <div class="slick-about">
+                    <br>
                     <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
                     <img src="img/blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
                     <img src="img/blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
@@ -235,8 +236,11 @@
                     현직자 매칭 서비스를 기반으로 <br> 커뮤니티를 형성하고, 콘텐츠를 공유합니다. <br> 그리고 매칭 이후 남겨주신 콘텐츠를 통해서 <br> 채용을 직접 연결해드릴 예정입니다.
                 </p>
             </div>
-            <div class="col-md-7 offset-md-1">
+            <br>
+            <div class="col-md-6 offset-md-1">
                 <ul class="features-list">
+                    <br>
+                    <br>
                     <li>Weekly new Content</li>
                     <li>Access to community</li>
                     <li>Match people you want</li>
