--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <h5>We contact on behalf</h5>
-                        <p class="text-muted">여러분이 남겨주신 분에게 대신 연락해드립니다. <br> 매주 투표를 통해 1등으로 선정된 분은 <br> 한양대에 직접 초대를 진행할 예정입니다. </p>
+                        <p class="text-muted">남겨주신 분에게 연락을 진행합니다. <br> 매주 투표를 통해 1등으로 선정된 분은 <br> 한양대에 직접 초대를 진행할 예정입니다. </p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
@@ -148,14 +148,16 @@
         <div class="row mt-6">
             <div class="col-md-6 mr-auto">
                 <h2>Cociety dreams of <br> a better society. </h2>
-                <p class="mb-5"> Cociety는 유료로 진행되는 HR 서비스를 넘어서 <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 따라서 대학교 & 기업과 협력관계를 구축할 예정입니다. </p>
+                <p class="mb-5"> Cociety는 유료로 진행되는 HR 서비스를 넘어서 <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 대학교 & 기업과 협력관계를 구축할 예정입니다. </p>
                 <a href="#" class="btn btn-light">
                     Try demo Now
                 </a>
+                <br>
             </div>
             <div class="col-md-5">
+                <br>
                 <div class="slick-about">
-                    <br>
+                    
                     <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
                     <img src="img/blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
                     <img src="img/blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
@@ -240,13 +242,13 @@
             <div class="col-md-6 offset-md-1">
                 <ul class="features-list">
                     <br>
-                    <br>
                     <li>Weekly new Content</li>
                     <li>Access to community</li>
                     <li>Match people you want</li>
                     <li>100 refund guarantee</li>
                     <li>Advance matching tools</li>
                     <li>Free unlimited support</li>
+                    <li>Cociety share reward</li>
                 </ul>
             </div>
         </div>
@@ -288,7 +290,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>How often do you release updates?</h6>
-                        <p class="text-muted">매주 4회 매칭 및 콘텐츠 제공을 목표로 하고 있습니다.</p>
+                        <p class="text-muted">매달 4회 매칭 및 콘텐츠 제공을 목표로 합니다.</p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>What is your refund policy?</h6>
@@ -296,7 +298,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <h6>How can I contact you?</h6>
-                        <p class="text-muted">help.cociety@gmail.com 을 통해 문의를 받고 있습니다. 편하게 연락해주세요! <br> 7일 이내 응답드리겠습니다. </p>
+                        <p class="text-muted">help.cociety@gmail.com로 연락해주세요! <br> 문의 이후 7일 이내 응답드리겠습니다. </p>
                     </div>
                 </div>
             </div>
