--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div class="row mt-6">
             <div class="col-md-6 mr-auto">
-                <h2>Cociety dreams of <br> a better society. </h2>
+                <h2>Cociety dreams <br> a better society. </h2>
                 <p class="mb-5"> Cociety는 유료로 진행되는 HR 서비스를 넘어서 <br> 좋은 사람들이 모인 커뮤니티를 만들고자 합니다. <br> 대학교 & 기업과 협력관계를 구축할 예정입니다. </p>
                 <a href="#" class="btn btn-light">
                     Try demo Now
