--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <br>
             </div>
             <div class="col-md-5">
-                <br>
+                <br><br><br><br>
                 <div class="slick-about">
                     
                     <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
@@ -239,7 +239,7 @@
                 </p>
             </div>
             <br>
-            <div class="col-md-6 offset-md-1">
+            <div class="col-md-7 offset-md-1">
                 <ul class="features-list">
                     <br>
                     <li>Weekly new Content</li>
@@ -249,6 +249,7 @@
                     <li>Advance matching tools</li>
                     <li>Free unlimited support</li>
                     <li>Cociety share reward</li>
+                    <li>Get job offer for you</li>
                 </ul>
             </div>
         </div>
@@ -334,6 +335,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="col-md-4">
                 <div class="card">
                     <a href="#">
@@ -346,6 +348,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="col-md-4">
                 <div class="card">
                     <a href="#">
@@ -359,6 +362,7 @@
                 </div>
             </div>
         </div>
+        <br>
         <div class="row mt-6">
             <div class="col-md-6 mx-auto text-center">
                 <a href="#" class="btn btn-primary">View all posts</a>
