--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h2 class="heading-black">Cociety offers connection you need.</h2>
+                <h2 class="heading-black">Cociety offers connection <br> you need.</h2>
                 
                 <p class="text-muted lead">코사이어티는 유명인을 인터뷰하는 팀에서 출발하여, 좋은 사람들이 서로 도움을 나누는 커뮤니티로 확대되었습니다. </p>
             </div>
