--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <br>
                     <li>Weekly new Content</li>
                     <li>Access to community</li>
-                    <li>Match people you want</li>
+                    <li>Connect people </li>
                     <li>Get job offer for you</li>
                 </ul>
             </div>
@@ -327,7 +327,7 @@
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>We launch new web site <br> by team leader</h5></a>
                         <p class="text-muted small-xl mb-2">April 22, 2023</p>
-                        <p class="card-text">2주간의 개발 공부를 통해서, 혼자 사이트를 개발했습니다. 서비스에 관심있으신 개발자분께서는 연락해주세요! <a href="#">Learn more<br></a><br></p>
+                        <p class="card-text">2주간의 개발 공부를 통해서, 혼자 사이트를 개발했습니다. 서비스에 관심있으신 개발자분께서는 연락해주세요! <a href="#">Learn more<br></a></p>
                     </div>
                 </div>
             </div>
@@ -340,7 +340,7 @@
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>We get fund from Hanyang University</h5></a>
                         <p class="text-muted small-xl mb-2">April 20, 2023</p>
-                        <p class="card-text">한양대학교로부터 자금 지원을 약속받았습니다. 한양대학교를 한국의 스탠포드로 만들어보겠습니다! 감사합니다. <a href="#">Learn more</a><br></p>
+                        <p class="card-text">한양대학교로부터 자금 지원을 약속받았습니다. 한양대학교를 한국의 스탠포드로 만들어보겠습니다! 감사합니다. <a href="#">Learn more<br></a></p>
                     </div>
                 </div>
             </div>
@@ -353,7 +353,7 @@
                     <div class="card-body">
                         <a href="#" class="card-title mb-2"><h5>The story of building community</h5></a>
                         <p class="text-muted small-xl mb-2">Sep 1st, 2022</p>
-                        <p class="card-text">DSC인베스트먼트에서의 근무를 마칠 시점, 좋은 사람들이 모인 커뮤니티를 만들어보자는 의견을 공유하며 출발했습니다. <a href="#">Learn more</a><br></p>
+                        <p class="card-text">DSC인베스트먼트에서의 근무를 마칠 시점, 좋은 사람들이 모인 커뮤니티를 만들어보자는 의견을 공유하며 출발했습니다. <a href="#">Learn more<br></a></p>
                     </div>
                 </div>
             </div>
